argocd-apps/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: api
        image: djhony/bilheteria-park-backend:latest
        ports:
        - containerPort: 8000
        
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /openapi.json
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /eventos
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /compras
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
